tests/errors/audio-processing.spcasmtest
org 0

brr "../binary.bin"
